--- a/teaching/23.2/221_HW/HW08.tex
+++ b/teaching/23.2/221_HW/HW08.tex
@@ -49,12 +49,14 @@ Due in recitation: Thursday 19 October 2023\vspace{2pt}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\item Use Lagrange multipliers to find the point on the paraboloid $z=x^2+y^2$ that is closest to the point $(1,2,0)$.
+%\item Use Lagrange multipliers to find the point on the paraboloid $z=x^2+y^2$ that is closest to the point $(1,2,0)$.
+\item Use  the method of Lagrange multipliers to find the extreme values of the function $x^3y$ on the ellipse $3x^2+y^2=4$.
 \vspace{-2pt}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
    
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\item Use the method of Lagrange multipliers to find the points on the surface $x^2y-z^2+4=0$ that are closest to the origin.
+\item Use the method of Lagrange multipliers to find the points on the surface $x y^2 z^4=16$ that are closest to the
+  origin. 
 \vspace{-2pt}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -84,14 +86,14 @@ Due in recitation: Thursday 19 October 2023\vspace{2pt}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \item For each of the following, find the maximum of the given function $f(x,y)$ over the bounded set $S$.
-  Use the methods of critical points to find the maximum and minimum values over the interior of $S$ and the method of Lagrange multipliers
-  to find the maximum and minimum on the boundary of $S$.
+  Use the methods of critical point analysis to find the maximum and minimum values over the interior of $S$ and the method
+  of Lagrange multipliers to find the maximum and minimum on the boundary of $S$.
 
   (a) $f(x,y)=x+y-xy$.
   \qquad  $S=\{(x,y)\mid x^2+y^2\leq 9\}$.
 
 
-  (b) $f(x,y)=\frac{x}{1+y^2}$.
+  (b) $f(x,y)=1+\frac{x}{1+y^2}$.
       \qquad $S=\{ (x,y) \mid x^2/4 + y^2/9 \leq 1\}$.
 \vspace{-2pt}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -105,14 +107,9 @@ Due in recitation: Thursday 19 October 2023\vspace{2pt}
 
   \item Use this to deduce the {\sl\color{Blue}Arithmetic Mean--Geometric Mean Inequality} for positive numbers $a_1,\dotsc,a_n$, which is
     \[
-    \sqrt[n]{a_1 a_2 \dotsb a_n}\ \leq\ \frac{a_1+a_2+ \dotsc+a_n}{n}\ .
+    \sqrt[n]{a_1 a_2 \dotsb a_n}\ \leq\ \frac{a_1+a_2+ \dotsb+a_n}{n}\ .
     \]
   \end{enumerate}
-\vspace{-2pt}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\item 
 \vspace{-2pt}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
