--- a/teaching/23.2/221_HW/HW10.tex
+++ b/teaching/23.2/221_HW/HW10.tex
@@ -117,9 +117,9 @@ Due in recitation: Thursday 2 November 2023\vspace{2pt}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \item
   \begin{minipage}[t]{5.2in}
-    Repeat the previous exercise, but for area in the region in the plane \newline
-    enclosed by the four-leaved rose $r=2\sin(2\theta)$.
-    (Use symmetry to \newline
+    Repeat the previous exercise, but for the first loop \newline
+    (in the positive quadrant) of the four-leaved rose  \newline $r=2\sin(2\theta)$.
+    (Use symmetry to
     reduce your workload.)
   \end{minipage}
   \begin{minipage}[t]{60pt}
@@ -133,6 +133,7 @@ Due in recitation: Thursday 2 November 2023\vspace{2pt}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \item Repeat the previous exercise, but for the full area enclosed by the \newline four-leaved rose $r=2\sin(2\theta)$.
+  (Again, use symmetry.)
 \vspace{-2pt}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
    
