--- a/teaching/23.2/221_HW/HW10.tex
+++ b/teaching/23.2/221_HW/HW10.tex
@@ -53,7 +53,7 @@ Due in recitation: Thursday 2 November 2023\vspace{2pt}
 
   (a) ${\displaystyle \int_{-\infty}^\infty x^2 e^{-x^2}\, dx}$
   \qquad and \qquad
-  (b) ${\displaystyle \int_{-\infty}^\infty \sqrt{x} e^{-x}\, dx}$\,.
+  (b) ${\displaystyle \int_0^\infty \sqrt{x} e^{-x}\, dx}$\,.
   
 \vspace{-2pt}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
