--- a/teaching/23.2/221_HW/HW12.tex
+++ b/teaching/23.2/221_HW/HW12.tex
@@ -98,7 +98,7 @@ Due in recitation: Thursday 16 November 2023\vspace{2pt}
   \qquad
   (b)\ ${\displaystyle \int_{(-1,1)}^{(4,2)} \bigl(y - \frac{1}{x^2}\bigr)\, dx\ +\ \bigl(x - \frac{1}{y^2}\bigr)\, dy}$\vspace{4pt}
 
-  (c)\ ${\displaystyle \int_{(0,0,0)}^{(1,1,1)} (6x y^3 + 2z^2) dx\ +\ 9x^2y^2\,dy\ +\ (4xy+1)dz}$\newline
+  (c)\ ${\displaystyle \int_{(0,0,0)}^{(1,1,1)} (6x y^3 + 2z^2) dx\ +\ 9x^2y^2\,dy\ +\ (4xz+1)dz}$\newline
   (Hint: try a piecewise linear path parallel to coordinate axes.)
  \vspace{-2pt}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -146,7 +146,7 @@ Due in recitation: Thursday 16 November 2023\vspace{2pt}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \item Let $k>2$ be an integer.
   Find the area of the  region bounded by the {\color{blue}\sl $k$-hypocycloid} with  vector equation \newline
-    $\bfr(t)= \bigl(a(k{-}1)\cos\theta+a\cos((k{-}1)\theta)\bigr)\bfi + \bigl(a(k{-}1)\sin\theta-a\sin((k{-}1)\theta)\bigr) \bfj$.
+    $\bfr(t)= \bigl(a(k{-}1)\cos t+a\cos((k{-}1) t)\bigr)\bfi + \bigl(a(k{-}1)\sin t-a\sin((k{-}1) t)\bigr) \bfj$.
     
     \begin{picture}(382,95)(0,-10)
       \put( 10,0){\includegraphics{images/HW12_2}}      \put(  0,-10){$k=3$, deltoid}
@@ -184,9 +184,9 @@ Due in recitation: Thursday 16 November 2023\vspace{2pt}
     Show each of the following.
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     \begin{enumerate}
-    \item ${\displaystyle \int_C x\,dy\ =\ \frac{1}{2}}(x_1+x_0)(y_1+y_0)$, where $C$ is the edge $v_0 v_1$.
+    \item ${\displaystyle \int_C x\,dy\ =\ \frac{1}{2}}(x_1+x_0)(y_1-y_0)$, where $C$ is the edge $v_0 v_1$.
 
-    \item The area of $P$ is ${\displaystyle \sum_{i=1}^n \frac{1}{2}(x_i+x_{i-1})(y_i+y_{i-1})  }$.
+    \item The area of $P$ is ${\displaystyle \sum_{i=1}^n \frac{1}{2}(x_i+x_{i-1})(y_i-y_{i-1})  }$.
 
     \item The area of a polygon whose coordinates are integers (a {\color{blue}\sl lattice polygon}) is always a multiple of $\frac{1}{2}$.
 
