--- a/teaching/23.2/221_HW/HW13.tex
+++ b/teaching/23.2/221_HW/HW13.tex
@@ -52,10 +52,9 @@ Due in recitation: Thursday 30 November 2023\vspace{2pt}
 \begin{enumerate}
 
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \item  
-  Use Green's Theorem to evaluate $\int_C 2xy dx + x^2 dy$, where $C$ is the cardioid curve defined by
+  Use Green's Theorem to evaluate $\int_C 2xy\, dx + x^2\, dy$, where $C$ is the cardioid curve defined by\newline
   $r=1-\sin(\theta)$.\vspace{-2pt}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
    
@@ -93,7 +92,7 @@ Due in recitation: Thursday 30 November 2023\vspace{2pt}
   (b) $\nabla(\bfF\cdot\bfG) = (\bfF\cdot\nabla) \bfG + (\bfG\cdot\nabla) \bfF
   + \bfF\times (\nabla\times\bfG) + \bfG\times (\nabla\times\bfF)$.
 
-  The operator $\nabla\cdot\nabla=\frac{\partial^2}{\partial x^2}+\frac{\partial^2}{\partial z^2}+\frac{\partial^2}{\partial z^2}$
+  The operator $\nabla\cdot\nabla=\frac{\partial^2}{\partial x^2}+\frac{\partial^2}{\partial y^2}+\frac{\partial^2}{\partial z^2}$
   is called the {\color{blue}{\sl Laplacian}} and often written {\color{blue}$\Delta$}.
 \vspace{-2pt}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -129,7 +128,7 @@ Due in recitation: Thursday 30 November 2023\vspace{2pt}
   %
   (c) ${\displaystyle\iint_S xy \; dS}$, where $S$ is the surface with parametrization $x=u+v$, $y=u-v$, $z=uv$, and
   $u^2+v^2\leq 1$.\newline
-  \mbox{\hspace{35pt}}
+  \mbox{\hspace{45pt}}
   What surface is this?
 \vspace{-2pt}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
