--- a/teaching/24.1/HW/HW05.tex
+++ b/teaching/24.1/HW/HW05.tex
@@ -44,8 +44,8 @@ To hand in: We are using Gradescope for homework submission.
     Also find the other two solutions (this may require reading my notes on cubics.)
 
   \item  {[15]}
-    Here is another cubic to solve completely: % $x^3=7x+6$.  That one is too hard
-    $4x^3+5x=3$.
+    Here is another cubic to solve completely: % $x^3=7x+6$.  That one is too hard as is this one $4x^3+5x=3$.
+       $2x^3-30x^2+162x-350=0$.
  
   \item  {[25]}
     Exercises 6.7.1, 6.7.2, and 6.7.3 in Stillwell. These should be relatively short.
