--- a/teaching/25.2/653_HW/HW01.tex
+++ b/teaching/25.2/653_HW/HW01.tex
@@ -4,7 +4,7 @@
 % Frank Sottile
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[12pt]{article}
-\usepackage{multicol,amssymb,amsmath}
+\usepackage{multicol,amsfonts, amssymb,  mathtools,amsmath}
 \usepackage{colordvi,graphicx}
 \headheight=8pt
 %
@@ -20,6 +20,7 @@
 \newcommand{\KK}{{\mathbb K}}
 \newcommand{\NN}{{\mathbb N}}
 \newcommand{\QQ}{{\mathbb Q}}
+\newcommand{\RR}{{\mathbb R}}
 \newcommand{\TT}{{\mathbb T}}
 \newcommand{\ZZ}{{\mathbb Z}}
 
@@ -36,7 +37,7 @@
 %\def\Indigo#1{\Color{.42 1. 0. .49}{#1}}
 \def\Indigo#1{\Color{1. .95 .05 .4}{#1}}
 \def\MyViolet#1{\Color{.6 1. 0. .15}{#1}}
-
+\def\TAMU#1{\Color{.15 1. .39 .69}{#1}}
 
 \newcommand{\barsl}{\noindent\begin{minipage}[t]{590pt}
 \Indigo{\rule{590pt}{1.2pt}}\vspace{-5.7mm}\\
@@ -59,86 +60,94 @@
 \Red{\rule{590pt}{1.1pt}}\bigskip
 \end{minipage}}
 
-\def\demph#1{\Maroon{{\sl #1}}}
-\def\defcolor#1{\Maroon{#1}}
+\def\demph#1{\TAMU{{\sl #1}}}
+\def\defcolor#1{\TAMU{#1}}
 
 \begin{document}
 \LARGE 
 \noindent
-Algebra \ \ Autumn 2023\vspace{1pt}\\
+Algebra \ \ Autumn 2025\vspace{1pt}\\
 Frank Sottile\vspace{1pt}\\
-\Large 21 August 2023 \hfill
+\Large 26 August 2025 \hfill
 \sf
  First Homework\makebox[40pt][l]{\ }
-\large\vspace{10pt}
+\normalsize\vspace{10pt}
 
 \noindent
 Write your answers neatly, in complete sentences.  
 I highly recommend recopying your work before handing it in.
 Correct and crisp proofs are greatly appreciated; oftentimes your work can be shortened and made clearer.
 
-\barsl
+\barsn
 
-\noindent\Maroon{{\large\sf Hand in to Frank Monday 28 August:}}  \Blue{(Have this on a separate sheet of paper.)}
+\noindent\Maroon{{\sf Hand in at the start of class, Thursday 28 August:}} 
 
 \begin{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\item[0.] Read Sections I.1 and I.2 of Lang's Algebra.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \item
-  Let $\alpha$ be a rotation about a point $p$ in the plane and $\rho$ be a reflection in a line through $p$.
-  What is $\alpha^{-1}$, geometrically?
-  Show that $\rho\alpha\rho=\alpha^{-1}$.  
-  Let $\sigma$ also be a reflection in a line.  
-  What is  $\rho\sigma$? 
- (There are several cases to consider.)
+  We explained that \defcolor{$\mbox{Func}(S)$}, the set of functions $f\colon S\to S$, where $S$ is  set, forms a monoid.
+  Let $S\vcentcolon=\{1,2\}$, a set with two elements.
+  We write the elements of $S$ in 2-line notation as
+  \[
+    e\vcentcolon=\begin{pmatrix}1&2\\1&2\end{pmatrix}\qquad
+  \alpha\vcentcolon=\begin{pmatrix}1&2\\2&1\end{pmatrix}\qquad
+  \beta\vcentcolon=\begin{pmatrix}1&2\\1&1\end{pmatrix}\qquad
+  \gamma\vcentcolon=\begin{pmatrix}1&2\\2&2\end{pmatrix}\,.
+  \]
+  Please give the composition (multiplication) table for this monoid $\mbox{Func}(\{1,2\})$.
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-\end{enumerate}
+  \begin{tabular}{c||c|c|c|c|}
+     $\circ$  & $e$  & $\alpha$ & $\beta$ & $\gamma$ \\\hline\hline
+     $e$      &      & & & \\\hline
+     $\alpha$ &      & &$\alpha\circ\beta$ & \\\hline
+     $\beta$  &      & & & \\\hline
+     $\gamma$ &      & & & \\\hline
+  \end{tabular}
 
-\barsl
-
-\noindent\Maroon{{\large\sf Hand in for the grader Monday 28 August:}}
-\Blue{(Have this separate from \#1.)}\bigskip
-
-A \demph{subgroup} of a group $G$ is a subset  $H$ of $G$ which is a group in its own right, under the group operations
-of $G$.
-For example, the set $2\ZZ$ of even integers is a subgroup of the additive group of integers.
-
-\begin{enumerate}
-\setcounter{enumi}{1}
+  (Evaluate the composition $\alpha\circ\beta$, place it in that cell, and do the same for the other 15 cells.)
+  
+  Is this monoid commutative?
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \item 
-     Show that a finite group $G$ of even order ($G$ has an even number of elements) has a non-identity element $a$ with $a^2=e$.
+  Let \defcolor{$\RR_{\geq 0}$} be the monoid of nonnegative real numbers under addition, and let
+  \defcolor{$\RR_+$} denote the monoid of positive real numbers under multiplication.  
+  \begin{enumerate}
+  \item Find the smallest submonoid of $\RR_{\geq 0}$ that contains $\sqrt{3}$.
+    (That is, describe it elements as a set.
+    The term ``smallest'' here means, by defintion, the submonoid that is contained in any other submonoid that contains $\sqrt{3}$.)
+  \item Find the smallest submonoid of $\RR_+$ that contains $\sqrt{3}$.
+  \item Are either of  $\RR_{\geq 0}$ or $\RR_+$  a group?
+        If so, do the answers to the previous quesions change if ``submonoid'' is replaced by ``subgroup''?
+  \end{enumerate}
+  (You need not justify your answers.)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\item Let $GL(2,\ZZ)$ be the collection of $2\times 2$ matrices with integer entries and determinant $\pm 1$.
-      This is a group under multiplication of matrices, with identity $I=\vect{1&0}{0&1}$.
-      Let $A:=\vect{0&-1}{1&0}$ and  $B:=\vect{0&1}{-1&1}$.
-      What is the order of $A$ ?  Of $B$ ? Of $AB$?
+\item Let $\defcolor{B_2(\RR)}\vcentcolon=\left\{ \left(\begin{smallmatrix}a&b\\0&c\end{smallmatrix}\right)
+                 \mid a,b,c\in\RR,\ ac\neq 0\right\}$.
+  Show that $B_2(\RR)$ is a subgroup of $\mbox{GL}(2,\RR)$, under matrix multiplication.
+  (This subgroup is called a \demph{Borel subgroup}.)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\item Suppose that $G$ is a group in which the square of every element is the identity.
-      Prove that $G$ is abelian.
+\item Let \defcolor{$\CC^\times$} be the group of nonzero complex numbers under multiplication.
+  Define $f\colon \CC^\times\to \mbox{GL}(2,\RR)$ by $f(z)=\left(\begin{smallmatrix} a(z) & b(z)\\-b(z)&a(z)\end{smallmatrix}\right)$, where
+  $a(z)\vcentcolon= \frac{z+\overline{z}}{2}$ and $b(z)\vcentcolon= \frac{z-\overline{z}}{2\sqrt{-1}}$ are the real and
+  imaginary parts of the complex number $z$.
+
+ Show that $f$ is an injective group homomorphism.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \item
-  Let $p$ be a prime number.
-  Consider the following subsets of the rational numbers, $\QQ$:
-%
-  \begin{eqnarray*}
-    \QQ[\tfrac{1}{p}] &:=& \{ \tfrac{a}{b}\in\QQ \mid
-        a,b\in\ZZ\,,\ \mbox{gcd}(a,b)=1\,,\ \mbox{and}\ b=p^i\ \mbox{some } i\geq0\}\\
-    \QQ^{(p)} &:=& \{ \tfrac{a}{b}\in\QQ \mid
-       a,b\in\ZZ\,,\ \mbox{gcd}(a,b)=1\,,\ \mbox{and}\ p\nmid b\}
-  \end{eqnarray*}
-%
-  Prove that these are subgroups of $\QQ$ under addition.
-
-  (We intend that $\gcd(0,1)=1$.)
+  The \demph{center} of a group $G$ is the set $\defcolor{Z(G)}\vcentcolon=\{a\in G\mid ag=ga\ \forall g\in G\}$.
+  For a fixed $g\in G$, the \demph{centralizer} of $g$ is the set
+  $\defcolor{C_G(g)}\vcentcolon=\{ a\in G\mid ag=ga\}$.
+  Prove that both $Z(G)$ and $C_G(g)$ are subgroups of $G$.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   
     
