--- a/teaching/25.2/653_HW/HW02.tex
+++ b/teaching/25.2/653_HW/HW02.tex
@@ -93,7 +93,7 @@ This is an opportunity to polish your skills at writing mathematics in a clear a
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \item  Let $G$ be a group, $H$ be a subgroup of $G$, and $g\in G$.
-       Prove that $gHg^{-1}$ is a subgroup of $G$ and that it is isomorphich to $H$.
+       Prove that $gHg^{-1}$ is a subgroup of $G$ and that it is isomorphic to $H$.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
  
@@ -118,7 +118,7 @@ This is an opportunity to polish your skills at writing mathematics in a clear a
 \item Assume that $G=\{e,a,b,c\}$ is a group with four elements and identity $e$.
       Suppose that $G$ has no element of order four.
       Prove that there is a unique group structure for $G$ and deduce that $G$ is  abelian.
-      What is the case if $G$ has an element of oder $4$?
+      What is the case if $G$ has an element of order $4$?
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
