fixed issue with HW04

--- a/teaching/25.2/653_HW/HW04.tex
+++ b/teaching/25.2/653_HW/HW04.tex
@@ -128,11 +128,12 @@ The last homework was a bit more than I probably should assign.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\item   You will prove  \defcolor{{\bf Gorsat's Lemma}:}
+\item   
    Let $G_1$ and $G_2$ be groups and suppose that  $H$ is a subgroup of $G_1\times G_2$ whose image under each
     coordinate projection $p_i\colon G_1\times G_2\to G_i$ for $i\in\{1,2\}$ is surjective.
-    Let $N_1\subset H$ be the kernel of $p_2$ and $N_2\subset H$ be the kernel of $p_1$ and show that we may identify $N_i$
-    as a normal subgroup of $G_i$, for  $i\in\{1,2\}$.
+    Let $N_1\subset H$ be the kernel of the projection $p_2$ restricted to $H$ and let $N_2\subset H$ be the kernel of the
+    projection $p_1$ restricted to $H$.
+    Show that we may identify $N_i$ as a normal subgroup of $G_i$, for  $i\in\{1,2\}$.
 
     Finally, show that the image of $H$ in $G_1/N_1 \times G_2/N_2$ is the graph of an isomorphism
     $G_1/N_1 \xrightarrow{\ \sim\ } G_2/N_2$.   
