--- a/teaching/25.2/653_HW/HW05.tex
+++ b/teaching/25.2/653_HW/HW05.tex
@@ -127,7 +127,7 @@ Correct and crisp proofs are greatly appreciated; oftentimes your work can be sh
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\item Let $\defcolor{\mathfrak{H}}\vcentcolon=\{z\in\CC\mid \Im(z)\geq 0\}$ be the upper half plane in the set of complex numbers.
+\item Let $\defcolor{\mathfrak{H}}\vcentcolon=\{z\in\CC\mid \Im(z)\Red{>} 0\}$ be the upper half plane in the set of complex numbers.
   Let $G\vcentcolon=SL(2,\RR)$, the group of real $2\times 2$ matrices with determinant 1.
   \[
   \mbox{For }z\in\CC\mbox{ and }
