--- a/teaching/25.2/653_HW/HW11.tex
+++ b/teaching/25.2/653_HW/HW11.tex
@@ -159,7 +159,7 @@ Correct and crisp proofs are greatly appreciated; oftentimes your work can be sh
       Work out this hint.
       For $g\in G$, define
       \[
-      \defcolor{e_{[g]}}\ \vcentcolon=\ \sum_{h\in g}  {^h}g\,,
+      \defcolor{e_{[g]}}\ \vcentcolon=\ \sum_{h\in G}  {^h}g\,,
       \]
       which only depends upon the conjugacy class $[g]$ of $g$.
       Show that these elements form a basis for $Z(\CC[G])$.
