--- a/teaching/25.2/653_HW/HW11.tex
+++ b/teaching/25.2/653_HW/HW11.tex
@@ -84,14 +84,14 @@ Correct and crisp proofs are greatly appreciated; oftentimes your work can be sh
 
 \barsn
 
-\noindent\Maroon{{\sf Hand in at the start of class, Thursday 20 November:}} 
+\noindent\Maroon{{\sf Hand in at the start of class, Tuesdayd 25 November:}} 
 
 \begin{enumerate}
   \setcounter{enumi}{66}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \item  
-  Let  $SS=M_n(D)$ be the ring of $n\times n$ matrices over a division ring $D$.
+  Let  $S=M_n(D)$ be the ring of $n\times n$ matrices over a division ring $D$.
   Show that $S$ has no proper ideals (Hint: use the elementary matrices $E_{a,b}$ whose only non-zero entry is in row $a$
   and column $b$---these form a `basis' of $S$.)
   
